RESOLVED FIXED292812
EventTarget.h and TreeScope.h don't need to include ExceptionOr.h
https://bugs.webkit.org/show_bug.cgi?id=292812
Summary EventTarget.h and TreeScope.h don't need to include ExceptionOr.h
Ryosuke Niwa
Reported 2025-05-09 18:17:32 PDT
Don't include ExceptionOr.h in these header files since forward declaration suffices.
Attachments
Ryosuke Niwa
Comment 1 2025-05-09 18:22:03 PDT
EWS
Comment 2 2025-05-09 22:55:05 PDT
Committed 294744@main (f6c083332052): <https://commits.webkit.org/294744@main> Reviewed commits have been landed. Closing PR #45200 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-05-09 22:56:14 PDT
Note You need to log in before you can comment on or make changes to this bug.