EventTarget.h and TreeScope.h don't need to include ExceptionOr.h https://bugs.webkit.org/show_bug.cgi?id=292812

Reviewed by Eric Carlson.

Replaced #include<ExceptionOr.h> with a forward declaration of ExceptionOr.

* Source/WebCore/Modules/webcodecs/WebCodecsVideoEncoder.cpp:
* Source/WebCore/Modules/webcodecs/WebCodecsVideoEncoder.h:
* Source/WebCore/dom/EventTarget.h:
* Source/WebCore/dom/TreeScope.h:
* Source/WebCore/html/DOMTokenList.cpp:
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::setValueForUser):
* Source/WebCore/html/HTMLInputElement.h:
* Source/WebCore/html/track/InbandWebVTTTextTrack.cpp:
* Source/WebKit/WebProcess/InjectedBundle/API/mac/WKDOMElement.mm:

Canonical link: https://commits.webkit.org/294744@main