Source/WebKit/WebProcess/InjectedBundle/API/mac/WKDOMElement.mm
@@ -28,6 +28,7 @@
 
 #import "WKDOMInternals.h"
 #import <WebCore/Element.h>
+#import <WebCore/ExceptionOr.h>
 
 @implementation WKDOMElement
 
